--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.addressables": "1.16.19",
     "com.unity.ads": "3.6.1",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.device-simulator": "2.2.3-preview",
